# casper_weather_oracle

./: .env.example  .gitignore  Procfile  README.md  backend_server.py  mcp_server.py  server_v2.py
agent/: api_submit.py  chain_client.py  confidence.py  config.py  gist_sync.py  github_sync.py  reconcile.py  requirements.txt  run_agent.py  submit_reading.py  weather_source.py
api/: requirements.txt  server.py
contracts/weather_oracle/: Cargo.toml
contracts/weather_oracle/src/: lib.rs  reputation.rs  weather_oracle.rs
contracts/weather_oracle/tests/: integration.rs
contracts/weather_oracle_new/: CHANGELOG.md  Cargo.toml  Odra.toml  README.md
contracts/weather_oracle_new/resources/: casper-test-contracts.toml
contracts/weather_oracle_new/src/: lib.rs  reputation.rs  weather_oracle.rs
contracts/weather_oracle_new/tests/: integration.rs
frontend/: .env.example  .gitignore  README.md  index.html  nohup.out  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/hooks/: useOracleData.js  useOracleDataX402.js
scripts/: setup.sh
