[package]
edition = "2021"
name = "weather_oracle_new"
version = "0.1.0"

[lib]
crate-type = ["rlib"]

[dependencies]
odra = { git = "https://github.com/odradev/odra", branch = "release/2.8.2", default-features = false }

[dev-dependencies]
odra-test = { git = "https://github.com/odradev/odra", branch = "release/2.8.2", default-features = false }

[build-dependencies]
odra-build = { git = "https://github.com/odradev/odra", branch = "release/2.8.2", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { git = "https://github.com/odradev/odra", branch = "release/2.8.2", default-features = false }
odra-cli = { git = "https://github.com/odradev/odra", branch = "release/2.8.2", default-features = false }

[features]
livenet = []

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "weather_oracle_new_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "weather_oracle_new_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "weather_oracle_new_cli"
path = "bin/cli.rs"
test = false

[patch.crates-io]
odra-casper-rpc-client = { path = "/home/otis/odra-casper-rpc-client-patched" }
odra-casper-livenet-env = { path = "/home/otis/odra-casper-livenet-env-patched" }